--- a/Best story ever.html
+++ b/Best story ever.html
@@ -15,11 +15,11 @@
   color: #FF0000;
 }
 
-tw-link, .enchantment-link[tags="crazed"] {
+tw-link[tags="crazed"]{
 	color: #696969;
 }
 
-tw-link:hover, .enchantment-link:hover {
+tw-link:hover[tags="crazed"]{
 	color: #FF0000;
 }
 
@@ -30,7 +30,7 @@ tw-link:hover, .enchantment-link:hover {
 You are browsing on social media and stumble upon a code story writing website. As an exquisite writer you immediately start composing a story to rival the best books. After hours of tiring work you publish your work with the highest hopes, however, after days of being online nobody has read your story! After weeks of sobbing you notice a message an unknown writer has sent you.
 
 [[Open the message]]
-[[Continue crying]]</tw-passagedata><tw-passagedata pid="2" name="t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾" tags="" position="501,303.5" size="100,100">(enchant: &quot;unknown writer&quot;, (text-colour: red) + (text-style:&#39;bold&#39;))
+[[Continue crying]]</tw-passagedata><tw-passagedata pid="2" name="totally safe link" tags="" position="501,303.5" size="100,100">(enchant: &quot;unknown writer&quot;, (text-colour: red) + (text-style:&#39;bold&#39;))
 You watch in shock as hundreds of viruses download themselves onto your pc, corrupting everything in their path, the unknown writer has sent you a scam link! ~~who would have thought~~. You need to get rid of the viruses before time runs out!
 
 &lt;/style&gt;
@@ -51,7 +51,7 @@ The virus begins to grow stronger and harnesses the power of your computer to mo
 [[Call your mum for help]]</tw-passagedata><tw-passagedata pid="4" name="Delete System 32" tags="end" position="706,500.5" size="100,100">You try to delete system  32 but remember that only idiots would delete important windows files.
 
 
-[[Return to previous option-&gt;t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾]]
+[[Return to previous option-&gt;totally safe link]]
 
 [[Return to the start-&gt;the start]]</tw-passagedata><tw-passagedata pid="5" name="Download a virus scanner" tags="end" position="701,299.5" size="100,100">The scanner was a scam and has installed more malware onto your computer!
 
@@ -60,14 +60,14 @@ The virus begins to grow stronger and harnesses the power of your computer to mo
 
 [[Use coding magic]]</tw-passagedata><tw-passagedata pid="6" name="Open the message" tags="crazed" position="301,99.5" size="100,100">You swiftly open the message, it reads as follows
 
-//I have read your work and it is amazing! Too bad nobody else has read it. I know you are saddened by this and I have also had to live through writing unknown stories. Well, &#39;&#39;had&#39;&#39; to, now with this program that I created myself, all my stories hit the front page of this site! Thousands of people read my work and thousands could read yours too! Click this [[t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾]] if you want to have the fame and glory that I have//</tw-passagedata><tw-passagedata pid="7" name="Continue crying" tags="" position="701,99.5" size="100,100">After a few more mintues of crying you remember that crying won&#39;t do you any good and that you should probably read this mysterious message
+//I have read your work and it is amazing! Too bad nobody else has read it. I know you are saddened by this and I have also had to live through writing unknown stories. Well, &#39;&#39;had&#39;&#39; to, now with this program that I created myself, all my stories hit the front page of this site! Thousands of people read my work and thousands could read yours too! Click this [[t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾-&gt;totally safe link]] if you want to have the fame and glory that I have//</tw-passagedata><tw-passagedata pid="7" name="Continue crying" tags="" position="701,99.5" size="100,100">After a few more mintues of crying you remember that crying won&#39;t do you any good and that you should probably read this mysterious message
 
 [[Open the message]]</tw-passagedata><tw-passagedata pid="8" name="Use coding magic" tags="end" position="901,299.5" size="100,100">You try to //code// the viruses out of your computer but quickly realise you have no coding skills whatsoever...
 
 Your PC is destroyed by viruses
 
 
-[[Return to previous option -&gt;t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾]]
+[[Return to previous option -&gt;totally safe link]]
 
 [[Return to the start-&gt;the start]]</tw-passagedata><tw-passagedata pid="9" name="Call your mum for help" tags="" position="100,599.5" size="100,100">Your mum tells you to get off the computer and go eat dinner! Well that was no help at all...
 
@@ -83,19 +83,20 @@ You and the virus patiently wait for someone to pick up...
 
 ...After 75 minutes of silence you need to make a decision
 
-[[Give up and go to the previous step-&gt;t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾]]
+[[Give up and go to the previous step-&gt;totally safe link]]
 [[Continue waiting...]]</tw-passagedata><tw-passagedata pid="11" name="Continue waiting..." tags="" position="103,299.5" size="100,100">After two hours finally someone answers with a heavy Scottish accent. Since it is impossible to understand what they are saying, you hang up.
 
 
-[[Go to previous step-&gt;t̷͕̏ó̵͕t̷̥͑a̵̢͒l̶͓̈́ḽ̷̾y̷̼͋ ̵̙̑s̵̡͊a̸̝̓f̵̢̌e̶̤̅ ̶̣̂l̷̝̚ỉ̵̗n̴̪̑k̶̭̾]] 
+[[Go to previous step-&gt;totally safe link]] 
 
 [[Go to the start-&gt;the start]]</tw-passagedata><tw-passagedata pid="12" name="RUN" tags="" position="500,599.5" size="100,100">You sprint as fast as you can away from the computer while it chases you at top speeds.
 
 [[Drive away]]
-[[Continue running-&gt;RUN 2]]</tw-passagedata><tw-passagedata pid="13" name="Drive away" tags="" position="301,699.5" size="100,100">You run to your car with the cyborg not far behind. While fumbling for your keys, the virus electrocutes your car, enveloping it in a ball of flames. You curl into a ball regretting not buying insurance. The cyborg uses the wrecked car and transforms itself into a mechanical beast.
+[[Continue running-&gt;RUN 2]]</tw-passagedata><tw-passagedata pid="13" name="Drive away" tags="" position="302,700.5" size="100,100">You run to your car with the cyborg not far behind. While fumbling for your keys, the virus electrocutes your car, enveloping it in a ball of flames. You curl into a ball regretting not buying insurance. The cyborg uses the wrecked car and transforms itself into a mechanical beast.
 
+[[Keep Running-&gt;RUN 2]]</tw-passagedata><tw-passagedata pid="14" name="RUN 2" tags="" position="501,801.5" size="100,100">You notice that the writer has not finished his story</tw-passagedata><tw-passagedata pid="15" name="Untitled Passage" tags="" position="1001,599.5" size="100,100">(enchant: &quot;The room is pitch black&quot;, (text-colour: black) + (text-style:&#39;outline&#39;))
 
-[[Keep Running-&gt;RUN 2]]</tw-passagedata><tw-passagedata pid="14" name="RUN 2" tags="" position="501,801.5" size="100,100"></tw-passagedata></tw-storydata>
+The room is pitch black</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
